Update README // Fix Homepage header alignment

--- a/src/components/HomePage.scss
+++ b/src/components/HomePage.scss
@@ -16,7 +16,7 @@
     align-items: center;
     background-color: white;
     width: 100%;
-    margin-top: 20vh;
+    margin-top: 5vh;
     margin-bottom: 4vh;
     padding: 3vh 0px;
     font-family: 'DM Serif Text', serif;
